assets/style.css
/* General CSS */
:root {
  --tg-color-primary: #BF3779;
  --tg-color-secondary: #272425;
	--tg-cards-animation-delay: 60ms;
	--tg-cards-animation-delay-default1: 4000ms;
	--tg-cards-animation-delay-default2: 8000ms;
  --tg-gap: 20px;
}
body {
  font-family: "Poppins", Sans-serif;
  background-color: #f9f9f9;
  background-image: url('images/bg-pattern.png');
  background-position: top center;
  margin: 0;
  padding: 60px 24px;
}
body * {
  box-sizing: border-box;
  transition: all 0.3s ease;
}

.tg-headings {
  max-width: max(820px, 65%);
  margin: 0 auto 40px;
}
.tg-title {
  color: var(--tg-color-secondary);
  font-size: 48px;
  font-weight: 500;
  line-height: 1.5em;
  text-align: center;
  margin: 0;
}
.tg-title span {
  color: var(--tg-color-primary);
  transition: all 0.3s ease;
}
.tg-subtitle {
  color: var(--tg-color-secondary);
  font-size: 32px;
  font-weight: 500;
  line-height: 1.43em;
  text-align: center;
  margin: 0;
}

.tg-cards-wrapper {
  display: flex;
  gap: var(--tg-gap);
}
.tg-cards-wrapper .col {
  flex: 0 1 auto;
  width: 20%;
  display: flex;
  flex-direction: column;
  gap: var(--tg-gap);
}
.tg-hover_card {
  border-radius: 12px;
  overflow: hidden;
}
.tg-hover_card .jltma-effect-lily {
  position: relative;
  cursor: pointer;
  aspect-ratio: 236/350;
  margin: 0;
}
.tg-hover_card .jltma-effect-lily::before {
  content: '';
  position: absolute;
  inset: 0;
  z-index: 5;
  transition: all 0.3s ease;
}
.tg-hover_card .jltma-effect-lily:hover::before {
  background-color: rgba(0, 0, 0, 0.50);
}
.tg-hover_card figcaption {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 100%;
  height: 100%;
  /* padding: 16px; */
  position: absolute;
  top: 0;
  left: 0;
  background: linear-gradient(0deg, #000 0.12%, rgba(0, 0, 0, 0.00) 49.93%);
  z-index: 5;
}
.tg-hover_card .jltma-image-hover-content {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 63px;
  padding: 0 16px;
  margin: 16px 0;
  overflow: hidden;
  transition: all 0.3s ease;
}
.tg-hover_card .jltma-image-hover-title {
  color: #fff;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.35em;
  margin-top: 0;
  margin-bottom: 5px;
}
.tg-hover_card .jltma-image-hover-content p {
  color: #fff;
  font-size: 12px;
  font-weight: 400;
  line-height: 1.5em;
  margin: 0;
}
.tg-hover_card img {
  width: 100%;
  max-width: 100%;
  animation-duration: 4s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  border-radius: 12px;
  transition: all 0.4s ease;
}
.tg-hover_card img.tg-hover-card-img-1{
	animation-name: card_appearing;
/* 	animation-delay: calc(1 * var(--tg-cards-animation-delay)); */
	animation-delay: var(--tg-cards-animation-delay-default1);
}
.tg-hover_card img.tg-hover-card-img-2 {
/* 	opacity: 0; */
/* 	animation-name: card_appearingSecond; */
	animation-name: card_appearing;
	animation-delay: var(--tg-cards-animation-delay-default2);
	z-index: 0;
}
.tg-cards-wrapper .col:nth-child(1) .tg-hover_card:last-child img.tg-hover-card-img-1 {
	animation-delay: calc((1 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(1) .tg-hover_card:last-child img.tg-hover-card-img-2 {
	animation-delay: calc((1 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}
.tg-cards-wrapper .col:nth-child(2) .tg-hover_card:first-child img.tg-hover-card-img-1 {
	animation-delay: calc((2 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(2) .tg-hover_card:first-child img.tg-hover-card-img-2 {
	animation-delay: calc((2 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}
.tg-cards-wrapper .col:nth-child(2) .tg-hover_card:last-child img.tg-hover-card-img-1 {
	animation-delay: calc((3 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(2) .tg-hover_card:last-child img.tg-hover-card-img-2 {
	animation-delay: calc((3 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}
.tg-cards-wrapper .col:nth-child(3) .tg-hover_card:first-child img.tg-hover-card-img-1 {
	animation-delay: calc((4 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(3) .tg-hover_card:first-child img.tg-hover-card-img-2 {
	animation-delay: calc((4 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}
.tg-cards-wrapper .col:nth-child(3) .tg-hover_card:last-child img.tg-hover-card-img-1 {
	animation-delay: calc((5 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(3) .tg-hover_card:last-child img.tg-hover-card-img-2 {
	animation-delay: calc((5 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}
.tg-cards-wrapper .col:nth-child(4) .tg-hover_card:first-child img.tg-hover-card-img-1 {
	animation-delay: calc((6 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(4) .tg-hover_card:first-child img.tg-hover-card-img-2 {
	animation-delay: calc((6 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}
.tg-cards-wrapper .col:nth-child(4) .tg-hover_card:last-child img.tg-hover-card-img-1 {
	animation-delay: calc((7 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(4) .tg-hover_card:last-child img.tg-hover-card-img-2 {
	animation-delay: calc((7 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}
.tg-cards-wrapper .col:nth-child(5) .tg-hover_card:first-child img.tg-hover-card-img-1 {
	animation-delay: calc((8 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(5) .tg-hover_card:first-child img.tg-hover-card-img-2 {
	animation-delay: calc((8 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}
.tg-cards-wrapper .col:nth-child(5) .tg-hover_card:last-child img.tg-hover-card-img-1 {
	animation-delay: calc((9 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default1));
}
.tg-cards-wrapper .col:nth-child(5) .tg-hover_card:last-child img.tg-hover-card-img-2 {
	animation-delay: calc((9 * var(--tg-cards-animation-delay)) + var(--tg-cards-animation-delay-default2));
}

.fadeInUp {
  animation-name: fadeInUp;
  animation-duration: 1.25s;
}


/* Animations */
@keyframes card_appearing {
  0% {
    opacity: 0;
		transform: translateY(20px);
  }
	25% {
		opacity: 0;
		transform: translateY(20px);
	}
	40% {
		opacity: 0;
		transform: translateY(20px);
	}
	50% {
		opacity: 0;
		transform: translateY(20px);
	}
	55% {
		opacity: 1;
		transform: translateY(0px);
	}
	60% {
		opacity: 1;
		transform: translateY(0px);
	}
	70% {
		opacity: 1;
    transform: translateY(0px);
  }
  100% {
		opacity: 1;
    transform: translateY(0px);
  }
}
@keyframes fadeInUp {
  0% {
    opacity: 0;
    transform: translate3d(0,100%,0);
  }
  100% {
    opacity: 1;
    transform: none;
  }
}


/* Responsive CSS */
@media (min-width: 1025px) {
  .tg-cards-wrapper .col:nth-child(2) .tg-hover_card:first-child,
  .tg-cards-wrapper .col:nth-child(4) .tg-hover_card:first-child {
    margin-top: 64px;
  }
  .tg-cards-wrapper .col:nth-child(3) .tg-hover_card:first-child {
    margin-top: 132px;
  }
}
@media (min-width: 1441px) {
  :root {
    --tg-gap: 1.38vw;
  }
  body {
    padding: 4.16vw 1.66vw;
  }
  .tg-headings {
    margin-bottom: 2.77vw;
  }
  .tg-title {
    font-size: 3.33vw;
  }
  .tg-subtitle {
    font-size: 2.22vw;
  }
  .tg-hover_card,
  .tg-hover_card img {
    border-radius: 18px;
  }
  .tg-cards-wrapper .col:nth-child(2) .tg-hover_card:first-child, 
  .tg-cards-wrapper .col:nth-child(4) .tg-hover_card:first-child {
    margin-top: 4.44vw;
  }
  .tg-cards-wrapper .col:nth-child(3) .tg-hover_card:first-child {
    margin-top: 9.166vw;
  }
  .tg-hover_card .jltma-image-hover-content  {
    padding: 0 1.11vw;
    margin: 1.11vw 0;
    height: 15%;
  }
  .tg-hover_card .jltma-image-hover-title {
    font-size: 0.97vw;
  }
  .tg-hover_card .jltma-image-hover-content p {
    font-size: 0.83vw;
  }
}
@media (max-width: 1024.98px) {
  :root {
    --tg-gap: 12px;
  }
  .tg-title {
    font-size: 32px;
  }
  .tg-subtitle {
    font-size: 24px;
    margin-bottom: 16px;
  }
  .tg-cards-wrapper {
    overflow-x: auto;
  }
  .tg-cards-wrapper .col {
    flex-direction: row;
    min-width: 48%;
  }
  .tg-hover_card {
    width: 100%;
  }
}
@media (max-width: 767.98px) {
  .tg-cards-wrapper .col {
    min-width: 64%;
  }
}
@media (max-width: 580.98px) {
  .tg-cards-wrapper .col {
    min-width: 96%;
  }
}

